--- a/shorturl/tinyurl/templates/index.html
+++ b/shorturl/tinyurl/templates/index.html
@@ -33,7 +33,7 @@
 Я всего лишь уличный повеса,<br>
 Улыбающийся встречным лицам.</p>
 
-<p>московский озорной гуляка.<br>
+<p>Я московский озорной гуляка.<br>
 По всему тверскому околотку<br>
 В переулках каждая собака<br>
 Знает мою легкую походку.</p>
