--- a/shorturl/tinyurl/templates/index.html
+++ b/shorturl/tinyurl/templates/index.html
@@ -8,7 +8,7 @@
     <style>
         h1 { font-size: 30px; }
        div {
-        width: 210px;	height: 170px; /* Размеры */
+        width: 210px;	height: 210px; /* Размеры */
         background: #fa2; /* Цвет фона */
         # outline: 2px solid #000; /* Чёрная рамка */
         border: 3px solid #fff; /* Белая рамка */
@@ -58,16 +58,8 @@
 Оттого прослыл я шарлатаном,<br>
 Оттого прослыл я скандалистом.</p>
 
-<p>                    1922 г.</p>
+<p>"                    1922 г."</p>
 
-    <p>
-        <input type="text" placeholder="Введите свое имя" name="name">
-    </p>
-    <p>
-        <input type="text" placeholder="Введите свою фамилию" name="surname">
-    </P>
-        <input type="submit">
-        <button type="button" onclick="alert('HTML не сложный, его легко понять!')">Нажми меня!</button><br>
 <div>
     <form>
          <fieldset>
@@ -79,7 +71,10 @@
                     <input type="text" placeholder="Введите Ваш E-mail" name="E-mail"><br>
                  </p>
                  <p>
-                    <input type="text" placeholder="Введите дату рождения" name="birth">
+                    <input type="text" placeholder="Введите дату рождения" name="birth"><br>
+                 </p>
+                 <p>
+                 <input type="submit" onclick="alert('HTML не сложный, его легко понять!')">
                  </p>
          </fieldset>
     </form>
